# creditcard_visualizer

./: .gitignore  BACKEND_INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  LICENSE  QUICK_START.md  README.md  TROUBLESHOOTING.md
backend/: AI_MODEL_ISSUES.md  API_USAGE.md  CHANGELOG.md  CHOOSING_AI_BACKEND.md  CSV_PROCESSING.md  Cargo.toml  ERROR_HANDLING.md  ERROR_HANDLING_COMPARISON.md  JSON_RESPONSE_HANDLING.md  MODULE_STRUCTURE.md  OPENAI_IMPLEMENTATION_SUMMARY.md  OPENAI_INTEGRATION.md  QUICK_START.md  README.md  REFACTORING.md  notes.txt
backend/src/: constants.rs  main.rs  utils.rs
frontend/: .env  .env.example  COMPLETION_SUMMARY.md  CSS_OPTIMIZATION.md  FEATURES.md  LAYOUT_GUIDE.md  QUICK_REFERENCE.md  RESPONSIVE_LAYOUT_UPDATE.md  SETUP_COMPLETE.md  package.json  test-backend.sh
frontend/src/: App.css  App.tsx  index.css  res_data.json
frontend/src/components/: DataVisualization.tsx  FileList.tsx  FileUpload.tsx  README.md  Refunds.tsx  TransactionsList.tsx
frontend/src/config/: api.ts
frontend/src/styles/: DataVisualization.css  FileList.css  FileUpload.css  Refunds.css  TransactionsList.css  shared.css
frontend/src/types/: index.ts
