[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
rspc = "0.4.1"
rspc-axum = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
specta = "1.0.5"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tower-livereload = "0.10.2"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# Optional but recommended for cleaner route registration
utoipa-axum = "0.2"
axum_typed_multipart = "0.16.5"
tempfile = "3.26.0"
